[package]
name = "r2r-msg-ext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
r2r = "0.7.5"
nalgebra = { version = "0.30.1", optional = true }
opencv = { version = "0.84.5", optional = true, features = ["clang-runtime"] }
fast-yuv442-to-rgb24 = { git = "https://github.com/jerry73204/fast-yuv442-to-rgb24.git", rev = "00b3c6da303aca4822d0234e3fe114874dcc24bf", optional = true }

[features]
full = ["with-nalgebra", "with-opencv"]
with-opencv = ["opencv"]
with-nalgebra = ["nalgebra"]
nightly = ["fast-yuv442-to-rgb24"]
